--- a/package.json
+++ b/package.json
@@ -17,22 +17,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.4.0",
-    "commander": "^11.0.0",
-    "esm": "^3.2.25",
-    "figlet": "^1.6.0",
     "@babel/parser": "^7.21.3",
     "@babel/traverse": "^7.21.3",
     "@vue/compiler-sfc": "^3.2.47",
     "arg": "^5.0.0",
+    "axios": "^1.4.0",
     "chalk": "^4.1.1",
+    "commander": "^11.0.0",
+    "copy-paste": "^1.5.3",
+    "dtsgenerator": "^3.18.0",
+    "esm": "^3.2.25",
     "execa": "^5.0.0",
+    "figlet": "^1.6.0",
     "g": "^2.0.1",
     "inquirer": "^8.1.2",
     "listr": "^0.14.3",
     "ncp": "^2.0.0",
     "ora": "^5.4.0",
-    "pkg-install": "^1.0.0"
+    "pkg-install": "^1.0.0",
+    "swagger-js-codegen": "^1.13.0"
   },
   "devDependencies": {
     "@types/node": "^20.3.2",
